* BUGFIX: Removed registration time from KSISignature and CalendarHashChain.
* BUGFIX: Removed addAggregationHashChain from KSISignature.
* IMPROVEMENT: Chain index continuation check
* IMPROVEMENT: HMAC algorithm of incoming messages
* IMPROVEMENT: Now possible to verify input hash level, default value is 0, GEN-3 is returned in case of error.

Version 4.9

2017-04-05 4.9.95

* FEATURE: Aggregator and extender configuration requests

Version 4.8

2017-03-16 4.8.91

* BUGFIX: Fixed adding datahashes with not the same level value to BlockSigner.

2017-03-13 4.8.89

* BUGFIX: Fixed KsiBlockSigner maxTreeHeight validation.
* BUGFIX: Fixed SimpleHttpPostRequestFuture response handling when response body is empty

Version 4.7

2017-02-22 4.7.85

* IMPROVEMENT: Check, if given hash could be added to the BlockSigner without exceeding given tree height. BlockSigner interface changed, add method returns boolean instead of KsiBlockSigner.
* BUGFIX: Fixed KsiBlockSigner initialization without default hash algorithm.
* IMPROVEMENT: Updated signature verification procedure. Added new error codes.
* IMPROVEMENT: X509CertificateSubjectRdnSelector supports certificates with multi-valued RDN-s

Version 4.6

2016-12-15 4.6.80

* IMPROVEMENT: Now the Identity information is provided as an array in SDK. Old methods are deprecated. Moved class com.guardtime.ksi.unsiganture.IdentityMetadata to package com.guardtime.ksi.blocksigner.
* IMPROVEMENT: KsiBlockSigner performance improvements
* FEATURE: Removed multi-signature support

Version 4.5

2016-11-17 4.5.72

* IMPROVEMENT: HashTreeBuilder optimizations

2016-11-10 4.5.71

* FEATURE: Added a PDU v2 implementation.
* IMPROVEMENT: Replaced com.guardtime.ksi.service package in module ksi-api with com.guardtime.ksi.pdu package in ksi-service-client module.
* IMPROVEMENT: Added a KsiBlockSignerBuilder class. It is recommended to use this builder to create new instances of KsiBlockSigner.
* IMPROVEMENT: Improved RFC3161Record verification.