@@ -13,6 +13,7 @@ Version 5.0
 * IMPROVEMENT: Chain index continuation check
 * IMPROVEMENT: HMAC algorithm of incoming messages
 * IMPROVEMENT: Now possible to verify input hash level, default value is 0, GEN-3 is returned in case of error.
+* IMPROVEMENT: Not possible to set TCPClients default threadpool size directly anymore. Instead possible to initialize TCPClient with custom ExecutorService.
 
 Version 4.9
 
